# NanoVoxel_old

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
data/: r.-20.11.mca  r.-20.12.mca  r.-20.13.mca  r.-21.11.mca  r.-21.13.mca  r.-22.11.mca  r.-22.12.mca  r.-22.13.mca  r.0.0.mca
include/: mc.h
include/miyuki/: miyuki.h  vec.hpp  vec3.hpp
include/miyuki/hw/: hwshader.cc  hwtexture.cc  shader.h  texture.h  vbo.cc  vbo.h
include/miyuki/io/: image.cc  image.h
include/miyuki/math/: spectrum.cc  spectrum.h  transform.cc  transform.h
include/miyuki/utils/: thread.cc  thread.h
include/nanovoxel/: corecl.h  film.h  image.h  scene.h  scheduler.h  texture.h  ui.h  util.h
include/nanovoxel/kernel/: compat.h  compat_cpu.h  compat_opencl.h  kernel.cc  kernel_def.h
shaders/: bsdf.h  common-defs.h  compute-shader.h  external-shaders.h
src/: corecl.cc  film.cc  main.cc  main.cpp  mc.cpp  scene.cc  ui.cc  uiedti.cc
x64-Clang-Release/: .ninja_deps  .ninja_log  CMakeCache.txt  NanoVoxel.ilk  build.ninja  cmake_install.cmake  imgui.ini  rules.ninja
x64-Clang-Release/.cmake/api/v1/reply/: cache-v2-5e5b523c6841154f77f2.json  cmakeFiles-v1-359ce1cbe419a57946f0.json  codemodel-v2-595076f7f579a5b9ada1.json  index-2019-11-22T03-14-45-0963.json  target-NanoVoxel-RelWithDebInfo-823a9dfb4c4fd3ea4bb4.json  target-glfw-RelWithDebInfo-04482abe8e786ca1608d.json  target-uninstall-RelWithDebInfo-b378b69753aa3b5cd556.json
